Added Menu and Image areas. Number of image panes can be dynamically changed in the menu.