@@ -1,14 +1,57 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'com.github.johnrengelman.shadow' version '5.0.0'
 }
 
 group 'com.michalkolos'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
+}
+
+javafx {
+    version = "13"
+    modules = [ 'javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.web', 'javafx.media', 'javafx.swing' ]
+}
+
+mainClassName = "foury.Main"
+
+dependencies {
+    compile group: 'org.openpnp', name: 'opencv', version: '3.4.2-1'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile "org.openjfx:javafx-graphics:11.0.1:win"
+    compile "org.openjfx:javafx-graphics:11.0.1:linux"
+    compile "org.openjfx:javafx-graphics:11.0.1:mac"
+
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
+    compile group: 'com.google.guava', name: 'guava', version: '12.0'
+    compile group: 'org.jetbrains', name: 'annotations', version: '16.0.1'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
+//    compile group: 'org.openjfx', name: 'javafx-swing', version: '14-ea+2'
+}
+
+task showMeCache {
+    configurations.compile.each { println it }
+}
+
+// Opens packages to external relfection, breaking encapsulation. Necessary for controlsfx dependency.
+run {
+    doFirst {
+        jvmArgs += [
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior.BehaviorBase=org.controlsfx.controls",
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED",
+                "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED",
+                "--add-opens=javafx.controls/javafx.scene.control.behavior.BehaviorBase=org.controlsfx.controls"
+        ]
+    }
 }
 
 dependencies {
